--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "random": "cpp"
+        "random": "cpp",
+        "iostream": "cpp",
+        "bitset": "cpp",
+        "string_view": "cpp",
+        "cmath": "cpp"
     }
 }
