--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "bitset": "cpp",
         "string_view": "cpp",
         "cmath": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "new": "cpp",
+        "ostream": "cpp"
     },
     "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
